# BnBSandbox

./: CMakeLists.txt  README.md
global_optimization/: ArgumentParser.h  BenchmarkManager.h  CMakeLists.txt  ProblemFactory.h  TreeGenerator.h  TreeGeneratorKnap.h  function.h  main.cpp
global_optimization/Objectives/: .sintimesY.h.swp  Ackley.h  Eggholder.h  Goldstein.h  Himmelblau.h  Rastrigin.h  SetObj.sh  XQube.h  objective.h  sincos.h
